# find_launch_time

./: .gitignore  LICENSE  README.md  acknowlegdments.md  find_time.ipynb  okay_kde.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: find_time-checkpoint.ipynb  okay_kde-checkpoint.ipynb
find_launch_time/logic/: config.py  explore.ipynb  find_time.py  load_data.py  okay_kde.ipynb  proportion_of_kde.py  test.py  utils.py
logic/: config.py  explore.ipynb  find_time.ipynb  find_time.py  kde_tools.py  load_data.py  proportion_of_kde.py  test.py  tools.py  utils.py
